--- a/.tekton/docker-push.yaml
+++ b/.tekton/docker-push.yaml
@@ -31,7 +31,7 @@ spec:
     - name: image-expires-after
       value: 5d
     - name: output-image
-      value: quay.io/karthikjeeyar/sb-app:{{revision}}
+      value: quay.io/quayadmin/sb-app:{{revision}}
     - name: path-context
       value: .
     - name: revision
